--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Online based Asset Monitoring and Analysis</title>
+    <title>Online based Asset Monitoring and Analysis CIMANGGIS</title>
     <script type="text/javascript" src="./rcmSettings.js"></script>
 	<script type="text/javascript" src="./modul/jquery-1.11.0.min.js"></script>
 	<script type="text/javascript" src="./modul/highcharts3/highcharts.js"></script>
