--- a/index.html
+++ b/index.html
@@ -2,12 +2,21 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Online based Asset Monitoring and Analysis DEPOK JAYA JAYA JAYA</title>
+    <title>Online based Asset Monitoring and Analysis</title>
     <script type="text/javascript" src="./rcmSettings.js"></script>
 	<script type="text/javascript" src="./modul/jquery-1.11.0.min.js"></script>
+	<!--script src="http://code.highcharts.com/highcharts.js"></script-->
 	<script type="text/javascript" src="./modul/highcharts3/highcharts.js"></script>
 	<script type="text/javascript" src="./modul/highcharts3/highcharts-more.js"></script>
+	<script type="text/javascript" src="./modul/highcharts3/exporting.js"></script>
 	<link rel="stylesheet" type="text/css" href="./resources/css/navkonfig.css">
+	<style>
+	.flAvReCh {
+			font-weight: bold;
+			text-align : right;
+			font-size: large;
+		}
+	</style>
     <!-- <x-compile> -->
         <!-- <x-bootstrap> -->
 			<!--script type="text/javascript" src="./modul/kalender/Extensible-config.js"></script-->
