php lagi php lagi

--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
 			font-size: large;
 		}
 	</style>
+	<link rel="icon" type="image/png" href="./performance.png">
     <!-- <x-compile> -->
         <!-- <x-bootstrap> -->
 			<!--script type="text/javascript" src="./modul/kalender/Extensible-config.js"></script-->
-			<link rel="icon" type="image/png" href="./resources/images/performance.png">
+			
             <link rel="stylesheet" href="bootstrap.css">
 			<link rel="stylesheet" type="text/css" href="./resources/css/ext-theme-classic/ext-theme-classic-all.css">
             <script src="ext/ext-dev.js"></script>
