--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         
         <script src="app.js"></script>
     <!-- </x-compile> -->
+    <!-- Author: Afrendy Bayu ---->
 </head>
 <body></body>
 </html>
